fixed a bug in the nav bar, and changed icon sizes on the dark mode toggle

--- a/src/Components/Nav/nav.css
+++ b/src/Components/Nav/nav.css
@@ -20,10 +20,6 @@
   text-decoration: none;
   border-radius: 5px;
   background-color: var(--bg);
-}
-
-.nav li a{
-  text-decoration: none;
   color: var(--nav-text);
 }
 
@@ -35,11 +31,6 @@
   text-decoration: none;
   background-color: var(--nav-li-hover);
 }
-
-/* broken? */
-/* .nav li a:active{
-  background-color: #242117;
-} */
 
 .theme-switch-container{
   display: flex;
@@ -116,7 +107,7 @@ input:checked + .slider:before {
 }
 
 #theme-icon{
-  height: 34px;
+  height: 20px;
   margin: 5px;
 }
 
